// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typeahead> AllowNew story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> ClearButton story renders snapshot 1`] = `
<div
  class="rbt has-aux"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value="Alabama"
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
  <div
    class="rbt-aux"
  >
    <button
      aria-label="Clear"
      class="close btn-close rbt-close"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rbt-close-content"
      >
        ×
      </span>
      <span
        class="sr-only visually-hidden"
      >
        Clear
      </span>
    </button>
  </div>
</div>
`;

exports[`<Typeahead> Controlled story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> CustomInput story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <div
      class="form-floating"
    >
      <input
        aria-autocomplete="both"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="form-control"
        id="floatingInput"
        placeholder="Choose a state..."
        role="combobox"
        type="text"
        value=""
      />
      <label
        for="floatingInput"
      >
        Choose a state...
      </label>
    </div>
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> CustomMenu story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> Default story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> DisabledItem story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> InputGrouping story renders snapshot 1`] = `
<div
  class="input-group"
>
  <span
    class="input-group-text"
  >
    $
  </span>
  <div
    class="rbt"
    style="outline: none; position: relative;"
    tabindex="-1"
  >
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        aria-autocomplete="both"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="rbt-input-main form-control rbt-input"
        placeholder="Choose a state..."
        role="combobox"
        type="text"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
  <span
    class="input-group-text"
  >
    .00
  </span>
</div>
`;

exports[`<Typeahead> InputValidation story renders snapshot 1`] = `
<div
  class="form-group"
>
  <div
    class="rbt is-valid"
    style="outline: none; position: relative;"
    tabindex="-1"
  >
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        aria-autocomplete="both"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="rbt-input-main form-control rbt-input is-valid"
        placeholder="Choose a state..."
        role="combobox"
        type="text"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
  <div
    class="valid-feedback"
  >
    Looks good!
  </div>
</div>
`;

exports[`<Typeahead> LoadingState story renders snapshot 1`] = `
<div
  class="rbt has-aux"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
  <div
    class="rbt-aux"
  >
    <div
      class="rbt-loader spinner-border spinner-border-sm"
      role="status"
    >
      <span
        class="sr-only visually-hidden"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`<Typeahead> MultiSelect story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    class="rbt-input-multi form-control rbt-input"
    tabindex="-1"
  >
    <div
      class="rbt-input-wrapper"
    >
      <div
        class="rbt-token rbt-token-removeable"
        tabindex="0"
      >
        <div
          class="rbt-token-label"
        >
          Alabama
        </div>
        <button
          aria-label="Remove"
          class="close btn-close rbt-close rbt-token-remove-button"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="rbt-close-content"
          >
            ×
          </span>
          <span
            class="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        class="rbt-token rbt-token-removeable"
        tabindex="0"
      >
        <div
          class="rbt-token-label"
        >
          Alaska
        </div>
        <button
          aria-label="Remove"
          class="close btn-close rbt-close rbt-token-remove-button"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="rbt-close-content"
          >
            ×
          </span>
          <span
            class="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        class="rbt-token rbt-token-removeable"
        tabindex="0"
      >
        <div
          class="rbt-token-label"
        >
          Arizona
        </div>
        <button
          aria-label="Remove"
          class="close btn-close rbt-close rbt-token-remove-button"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="rbt-close-content"
          >
            ×
          </span>
          <span
            class="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        class="rbt-token rbt-token-removeable"
        tabindex="0"
      >
        <div
          class="rbt-token-label"
        >
          Arkansas
        </div>
        <button
          aria-label="Remove"
          class="close btn-close rbt-close rbt-token-remove-button"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="rbt-close-content"
          >
            ×
          </span>
          <span
            class="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        style="display: flex; flex: 1; height: 100%; position: relative;"
      >
        <input
          aria-autocomplete="both"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-multiselectable="true"
          autocomplete="off"
          class="rbt-input-main"
          placeholder=""
          role="combobox"
          style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
          type="text"
          value=""
        />
        <input
          aria-hidden="true"
          class="rbt-input-hint"
          readonly=""
          style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Typeahead> Pagination story renders snapshot 1`] = `
<div
  class="rbt"
  style="outline: none; position: relative;"
  tabindex="-1"
>
  <div
    style="display: flex; flex: 1; height: 100%; position: relative;"
  >
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="rbt-input-main form-control rbt-input"
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden="true"
      class="rbt-input-hint"
      readonly=""
      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
      tabindex="-1"
      value=""
    />
  </div>
</div>
`;
